# deep-research

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml
deep_research/: __init__.py  prompts.yaml.j2  utils.py
deep_research/core/: __init__.py  prompts.py  query_generation.py  source_quality.py
deep_research/crawl/: __init__.py  firecrawl_client.py  markitdown_client.py  web_client_models.py
deep_research/crawl/cache/: README.md  __init__.py  cache_decorator.py  cache_dump.py  cache_models.py
deep_research/crawl/web/: __init__.py  brave_search.py  duckduckgo_search.py
deep_research/graphrag/: __init__.py  extraction.py  knowledge_graph.py  models.py  retrieval.py
deep_research/models/: __init__.py  models.py
deep_research/utils/: docling_client.py
deep_research/utils/cache/: README.md
deep_research/utils/web/: brave_search.py  duckduckgo_search.py
examples/: README.md  cache_example.py  cache_model_example.py  comparison_example.py  dump_example.py  enhanced_features_example.py  graphrag_example.py  prompts_example.py  query_generation_example.py  web_search_example.py
test/: test_cache.py  test_deep_research.py  test_docling.py  test_search.py
